admbsecr 0.1.4
--------------

* Added a further method to contours() function. It now works with
  the "dist" method.

admbsecr 0.1.3
--------------

* Added functions mrdstrapcov() and disttrapcov(), which fit SECR
  models in the specific case where:

    * There are only two traps, both at the same location.

    * Additional information is the estimated or exact distance
      the animal.

    * Each trap is associated with its own halfnormal detection
      function.

  Eventually these specific cases will also be handled by
  admbsecr().

* Added further methods to contours() function. It now works with
  methods "toass", "ang", and "disttc".

* Further cosmetic improvements to contours().

* The admbsecr() function now accepts an argument which fixes
  parameters at a specific value.

admbsecr 0.1.2
--------------

* Added additional method:

    * "mrds" -- SECR with known animal locations. Equivalent to
      mark-recapture distance sampling.

* Added contours() function, which plots estimated animal location
  densities. This currently works with fits from methods "simple",
  "toa", and "ss".

* Major bug fix: Methods "ang" and "dist" did not work, as a file
  (bessel.cxx) needs to be available.

* Minor bug fixes regarding error and warning messages.

* Capture history matrices with more than one session now result in an
  error message.

* A log link function is no longer used to calculated expected
  received signal strength for methods "ss" and "sstoa". Eventually
  both options will be available to the user.

admbsecr 0.1.1
--------------

* Added additional method:

    * "dist" -- SECR with estimated distance information.

* Added the parameter `bounds` to admbsecr(). This allows the user to
  specify bounds on any parameters they wish to, overriding the
  defaults.

* A log link function is now used to calculate expected received
  signal strength for methods "ss" and "sstoa".

* Bug fix to `profpars` parameter of admbsecr(). Profile likelihood